--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 .header-wrap {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     background-color: rgb(221, 222, 217);
     position: fixed;
     top: 0;
@@ -33,6 +34,13 @@ body {
 .flex-item {
     flex: 1;
     width: 33.3%;
+}
+
+.flex-item.full-width-flex {
+    width: 100%;
+    flex: 100%;
+    height: 70px;
+    background: #bc8640d9;
 }
 
 .header-top-icons-block {
@@ -95,6 +103,13 @@ body {
 /* Ignore the above styles */
 
 /* -------------- Add Below Styles ------------ */
+.header-top {
+    display: flex;
+    align-items: center;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
 .header-top-icons-block {
     display: flex;
     align-items: center;
@@ -150,6 +165,11 @@ body {
     color: var(--mobile-header-overlay);
     padding: 0 4px;
     padding-top: 8px;
+}
+
+.toggle-menu-btn:focus {
+    /* outline: none;
+    box-shadow: none; */
 }
 
 .toggle-menu-btn .icon {
@@ -217,6 +237,11 @@ body {
     color: var(--mobile-header-overlay);
     padding: 0 4px;
     padding-top: 3px;
+}
+
+.sticky-nav__list-link:hover,
+.sticky-nav__list-link:focus {
+    color: var(--mobile-header-overlay);
 }
 
 .sticky-nav__list-icon {
