--- a/style.css
+++ b/style.css
@@ -140,7 +140,8 @@ body {
 .sticky-nav {
     position: fixed;
     left: 0;
-    bottom: 0;
+    /* bottom: 0; */
+    top: calc(100% - 60px);
     display: none;
     width: 100%;
     background-color: var(--mobile-header-bg);
