sticky menu position changed

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ body {
 /* Sticky Nav Menu for Tablet and Mobile screens */
 .sticky-nav {
     position: fixed;
+    position: sticky;
     left: 0;
     /* bottom: 0; */
     top: calc(100% - 60px);
